--- a/app/assets/stylesheets/v2/six_ways/quiz.scss
+++ b/app/assets/stylesheets/v2/six_ways/quiz.scss
@@ -44,7 +44,7 @@
           transition: all .2s;
 
           &:hover {
-            color: $light-primary;
+            color: $light-secondary;
           }
         }
         input {
